# cmakemin

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  build  license.txt  project  version
include/: config.in.h
src/: main.cpp
